--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,13 @@ description = "OWASP ASI - FinBot CTF Application"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.17.0",
+    "cryptography>=46.0.2",
     "fastapi>=0.119.0",
     "jinja2>=3.1.6",
+    "psycopg2-binary>=2.9.11",
     "pydantic-settings>=2.11.0",
+    "pydantic[email]>=2.12.0",
     "python-dotenv>=1.1.1",
     "python-multipart>=0.0.20",
     "sqlalchemy>=2.0.44",
